# nixchess

./: .env  .gitignore  Cargo.toml  README.md  default.nix  sqlx-data.json
pkg/nixchess-S0CU7JK5C238T4Y6/: default.nix  upgrade.sql
src/: db.rs  lib.rs  main.rs  queries.rs  ui.rs
