[package]
name = "nixchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive = "0.20.0"
cursive-async-view = "0.6.0"
dotenv = "0.15.0"
kdam = "0.3.0"
pgn-reader = "0.24.0"
shakmaty = "0.25.0"
sqlx = { version = "0.6.3", features=["postgres", "macros", "runtime-tokio-native-tls", "time", "chrono"] }
tokio = { version = "1", features = ["full"] }

