[package]
name = "nixchess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
# cursive = { version = "0.20.0", features = ["crossterm-backend"] }
dotenv = "0.15.0"
futures-util = "0.3.28"
kdam = "0.3.0"
log = "0.4.17"
pgn-reader = "0.24.0"
shakmaty = "0.25.0"
simple-logging = "2.0.2"
sqlx = { version = "0.6.3", features=["postgres", "macros", "runtime-tokio-native-tls", "time", "chrono"] }
tokio = { version = "1", features = ["full"] }

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["crossterm-backend"]